# Warden-Protocol

./: .gitignore  Anchor.toml  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
agent-sim/: package-lock.json  package.json  tsconfig.json
agent-sim/src/: demo-flow.ts  index.ts  rogue-agent.ts  sentinel-monitor.ts  warden-monitor.ts
app/: next.config.mjs  package.json  prisma.config.ts
app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/src/components/: ActivityFeed.tsx  AgentCard.tsx  AnimatedCounter.tsx  AuthGuard.tsx  ClearanceBadge.tsx  CyberBackground.tsx  EmailChannel.tsx  GlassCard.tsx  GlitchText.tsx  GradientButton.tsx  HUDFrame.tsx  HeroGrid.tsx  InsurancePanel.tsx  LiveAgentsShowcase.tsx  LiveTimeline.tsx  MobileMenu.tsx  (+11 more)
docker/solana/: Dockerfile  entrypoint.sh
docs/: README.md  architecture.md  deployment.md  development.md  frontend.md  protocol.md  setup.md  troubleshooting.md
programs/sentinel-protocol/: Cargo.toml
programs/sentinel-protocol/src/: constants.rs  errors.rs  lib.rs
programs/sentinel-protocol/src/instructions/: arrest_agent.rs  buy_coverage.rs  cancel_coverage.rs  cast_vote.rs  file_claim.rs  init_dao.rs  init_insurance_pool.rs  mod.rs  post_bail.rs  process_payment.rs  register_agent.rs  release_agent.rs  report_violation.rs
programs/sentinel-protocol/src/state/: agent.rs  bail.rs  cell.rs  dao.rs  insurance.rs  mod.rs
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: client.ts  constants.ts  helpers.ts  index.ts  pda.ts  types.ts
(+46 files in other folders)
